--- a/help/html_EN/Others/BRMTools.html
+++ b/help/html_EN/Others/BRMTools.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>kitsuTaskSnap</title>
+<title>kitsuManager</title>
 <script type="text/javascript" src="../html5.js"></script>
 <script>
 	if(window.screen.width>=1680){
@@ -43,10 +43,10 @@
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin</a></li>
 				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager</a></li>
-				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_current_item">&#62;&#62;KitsuTaskSnap</a></li>
+				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">&#62;&#62;KitsuTaskSnap</a></li>
 				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_spread_a">&#62;&#62;TrimmerTools</a></li>
 				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">&#62;&#62;directoryTools</a></li>
-				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">&#62;&#62;BRMTools</a></li>
+				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_current_item">&#62;&#62;BRMTools</a></li>
 				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">&#62;&#62;videoCompareTools</a></li>
 			  </ul>
 		  </li>
@@ -83,36 +83,40 @@
 			  <li class="nav_content_top_li">
 				  <a href="../index.html">Docs</a>
 				  &#62;
-			  </li>
-			  	  <li class="nav_content_top_li">
+		    </li>
+	  	    <li class="nav_content_top_li">
 				  <a href="Others.html">Others</a>
 				  &#62;
-			  </li>
-			  <li class="nav_content_top_li">KitsuTaskSnap</li>
+		    </li>
+			  <li class="nav_content_top_li">BRMTools</li>
 			  <li  class="nav_language_li">
-				  <a href="../../html/Others/kitsuSnap.html">翻译</a>
-			  </li>
+				  <a href="../../html/Others/BRMTools.html">翻译</a>
+		    </li>
 			  <li></li>
 		  </ul>
 		  <hr>
 		  </div>
 		<div class="content">
 		  <div>
-			<h1>KitsuTaskSnap</h1>
-			<p>KitsuTaskSnap provides a screenshot function for your scenes.<br><br><img src="../../Resources/Others/Others_KSSnap_01_EN.webp" width="650" height="206" alt="" id="display_img"/>
-			  </p>
-			</div>
+			<h1>BRMTools</h1>
+			<p>BRMTools (Batch Rename Image Tool) is a tool used to batch correct image filenames in the JPG format. It has the following features:<br>
+			1.It can replace '-' in the image names with '_'.<br>
+			2.It can replace 'SC' with 'SC####' (where #### represents a sequence of numbers).<br>
+			3.It can replace 'SH' with 'SH####' (where #### represents a sequence of numbers).<br>
+			  <img src="../../Resources/Others/Others_BRMTools_01_EN.png" width="600" height="423" alt="" id="display_img"/>
+		    </p>
+		  </div>
 		</div>
 		<footer>
 		  <hr>
 		  © Copyright 2023, ZuruSZ.
 		  </footer>
-			</div>
-		</div>
-	</section>
+		  </div>
+	  </div>
+  </section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Others/Others_KSSnap_01_EN.webp" alt="" width="1300" height="411"> </div>
+	<img src="../../Resources/Others/Others_BRMTools_01_EN.png" alt="" width="1000" height="698"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
