--- a/help/html_EN/Others/kitsuManager.html
+++ b/help/html_EN/Others/kitsuManager.html
@@ -41,9 +41,13 @@
 				<a href="Others.html" class="menu_spread_a_top">Others<p id="demo"></p></a>
 			</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">KitsuTaskLogin</a></li>
-					<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_current_item">KitsuTaskManager</a></li>
-					<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">KitsuTaskSnap</a></li>
+				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin</a></li>
+				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_current_item">&#62;&#62;KitsuTaskManager</a></li>
+				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">&#62;&#62;KitsuTaskSnap</a></li>
+				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_spread_a">&#62;&#62;TrimmerTools</a></li>
+				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">&#62;&#62;directoryTools</a></li>
+				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">&#62;&#62;BRMTools</a></li>
+				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">&#62;&#62;videoCompareTools</a></li>
 			  </ul>
 		  </li>
 			<script>
