--- a/help/html_EN/Others/videoCompareTool.html
+++ b/help/html_EN/Others/videoCompareTool.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>kitsuTaskSnap</title>
+<title>videoCompareTools</title>
 <script type="text/javascript" src="../html5.js"></script>
 <script>
 	if(window.screen.width>=1680){
@@ -41,13 +41,13 @@
 				<a href="Others.html" class="menu_spread_a_top">Others<p id="demo"></p></a>
 			</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin</a></li>
+				  	<li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin</a></li>
 				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager</a></li>
-				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_current_item">&#62;&#62;KitsuTaskSnap</a></li>
+				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">&#62;&#62;KitsuTaskSnap</a></li>
 				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_spread_a">&#62;&#62;TrimmerTools</a></li>
 				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">&#62;&#62;directoryTools</a></li>
 				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">&#62;&#62;BRMTools</a></li>
-				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">&#62;&#62;videoCompareTools</a></li>
+				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_current_item">&#62;&#62;videoCompareTools</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -83,36 +83,38 @@
 			  <li class="nav_content_top_li">
 				  <a href="../index.html">Docs</a>
 				  &#62;
-			  </li>
-			  	  <li class="nav_content_top_li">
+		    </li>
+	  	    <li class="nav_content_top_li">
 				  <a href="Others.html">Others</a>
 				  &#62;
-			  </li>
-			  <li class="nav_content_top_li">KitsuTaskSnap</li>
+		    </li>
+			  <li class="nav_content_top_li">BRMTools</li>
 			  <li  class="nav_language_li">
-				  <a href="../../html/Others/kitsuSnap.html">翻译</a>
-			  </li>
+				  <a href="../../html/Others/videoCompareTool.html">翻译</a>
+		    </li>
 			  <li></li>
 		  </ul>
 		  <hr>
 		  </div>
 		<div class="content">
 		  <div>
-			<h1>KitsuTaskSnap</h1>
-			<p>KitsuTaskSnap provides a screenshot function for your scenes.<br><br><img src="../../Resources/Others/Others_KSSnap_01_EN.webp" width="650" height="206" alt="" id="display_img"/>
-			  </p>
-			</div>
+			<h1>videoCompareTools</h1>
+			<p>videoCompareTools (video EDL comparison tool) checks the length of shots with edl，it compares the frame count of a video with the frame count of an EDL to prevent any discrepancies of extra or missing frames. It is a useful tool for animators to perform pre-submission checks.<br><br><br><br>
+			  <img src="../../Resources/Others/Others_videoCompare_01.png" width="646" height="229" alt="" id="display_img"/>
+				<br><br>Double-click to run, input or select the paths of the EDL file and the video file respectively, then click the RUN button to execute<br><br>Note: You can compare multiple videos by selecting multiple videos at once during the selection process
+		    </p>
+		  </div>
 		</div>
 		<footer>
 		  <hr>
 		  © Copyright 2023, ZuruSZ.
 		  </footer>
-			</div>
-		</div>
-	</section>
+		  </div>
+	  </div>
+  </section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Others/Others_KSSnap_01_EN.webp" alt="" width="1300" height="411"> </div>
+	<img src="../../Resources/Others/Others_videoCompare_01.png" alt="" width="1200" height="426"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
