--- a/help/html/Others/Others.html
+++ b/help/html/Others/Others.html
@@ -42,8 +42,12 @@
 			</div>
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin<br>Kitsu登录</a></li>
-					<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager<br>Kitsu任务管理器</a></li>
-					<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">&#62;&#62;KitsuTaskSnap<br>Kitsu拍屏</a></li>
+				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager<br>Kitsu任务管理器</a></li>
+				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">&#62;&#62;KitsuTaskSnap<br>Kitsu拍屏</a></li>
+				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_spread_a">&#62;&#62;TrimmerTools<br>剪辑工具</a></li>
+				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">&#62;&#62;directoryTools<br>工程目录创建工具</a></li>
+				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">&#62;&#62;BRMTools<br>批量修正图片命名工具</a></li>
+				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">&#62;&#62;videoCompareTools<br>视频edl对比工具</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -99,6 +103,10 @@
 				<li class="branch_content_li"><a href="kitsuLogin.html">Kitsu Task Login&#62;&#62;Kitsu登录</a></li>
 				<li class="branch_content_li"><a href="kitsuManager.html">Kitsu Task Manager&#62;&#62;Kitsu任务管理器</a></li>
 				<li class="branch_content_li"><a href="kitsuSnap.html">Kitsu Task Snap&#62;&#62;Kitsu拍屏</a></li>
+				<li class="branch_content_li"><a href="trimmerTools.html">TrimmerTools&#62;&#62;剪辑工具</a></li>
+				<li class="branch_content_li"><a href="directoryTool.html">directoryTools&#62;&#62;工程目录创建工具</a></li>
+				<li class="branch_content_li"><a href="BRMTools.html">BRMTools&#62;&#62;批量修正图片命名工具</a></li>
+				<li class="branch_content_li"><a href="videoCompareTool.html">videoCompareTools&#62;&#62;视频edl对比工具</a></li>
 			</ul>
 			</div>
 			
