--- a/help/html/Others/trimmerTools.html
+++ b/help/html/Others/trimmerTools.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>kitsuTaskSnap</title>
+<title>trimmerTools</title>
 <script type="text/javascript" src="../html5.js"></script>
 <script>
 	if(window.screen.width>=1680){
@@ -41,16 +41,16 @@
 				<a href="Others.html" class="menu_spread_a_top">Others<p id="demo"></p></a>
 			</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin</a></li>
-				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager</a></li>
-				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_current_item">&#62;&#62;KitsuTaskSnap</a></li>
-				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_spread_a">&#62;&#62;TrimmerTools</a></li>
-				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">&#62;&#62;directoryTools</a></li>
-				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">&#62;&#62;BRMTools</a></li>
-				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">&#62;&#62;videoCompareTools</a></li>
+				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">&#62;&#62;KitsuTaskLogin<br>Kitsu登录</a></li>
+				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">&#62;&#62;KitsuTaskManager<br>Kitsu任务管理器</a></li>
+				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">&#62;&#62;KitsuTaskSnap<br>Kitsu拍屏</a></li>
+				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_current_item">&#62;&#62;TrimmerTools<br>剪辑工具</a></li>
+				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">&#62;&#62;directoryTools<br>工程目录创建工具</a></li>
+				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">&#62;&#62;BRMTools<br>批量修正图片命名工具</a></li>
+				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">&#62;&#62;videoCompareTools<br>视频edl对比工具</a></li>
 			  </ul>
 		  </li>
-			<script>
+		  <script>
 					var spread_span=document.querySelector(".menu_spread_span");
 					var spread_ul=document.querySelector(".menu_spread_ul");
 					var spread_top_a=document.querySelector(".menu_spread_a")
@@ -84,13 +84,13 @@
 				  <a href="../index.html">Docs</a>
 				  &#62;
 			  </li>
-			  	  <li class="nav_content_top_li">
+	  	    <li class="nav_content_top_li">
 				  <a href="Others.html">Others</a>
 				  &#62;
-			  </li>
-			  <li class="nav_content_top_li">KitsuTaskSnap</li>
+		    </li>
+			  <li class="nav_content_top_li">TrimmerTools</li>
 			  <li  class="nav_language_li">
-				  <a href="../../html/Others/kitsuSnap.html">翻译</a>
+				  <a href="../../html_EN/Others/trimmerTools.html">Translate</a>
 			  </li>
 			  <li></li>
 		  </ul>
@@ -98,10 +98,20 @@
 		  </div>
 		<div class="content">
 		  <div>
-			<h1>KitsuTaskSnap</h1>
-			<p>KitsuTaskSnap provides a screenshot function for your scenes.<br><br><img src="../../Resources/Others/Others_KSSnap_01_EN.webp" width="650" height="206" alt="" id="display_img"/>
+			<h1>TrimmerTools</h1>
+			<p>TrimmerTools(剪辑工具)，是根据edl剪辑音频或者视频的工具。<br><br>
+				<img src="../../Resources/Others/Others_TrimmerTools_01.png" width="200" height="217" alt="" id="display_img"/><br><br>
+				1.在文件夹目录下（U:\zuruTools\zuruTools\as_tools\tools\app\trmmerTools）拷贝Trimmer.exe到自己的盘中，路径下不要有中文,双击运行。<br><br>
+				<img src="../../Resources/Others/Others_TimmerTools_02.png" width="286" height="229" alt="" id="display_img02"/><br><br>
+				2.选择要剪辑的文件类型（音频或者视频），<br><br>
+				<img src="../../Resources/Others/Others_TimmerTools_03.png" width="561" height="236" alt="" id="display_img03"/><br><br>
+				3.选择edl、剪辑文件和输出文件夹按RUN即可运行<br><br>
+				注意！！！<br><br>
+				1.输入和输出路径不要有中文！!<br>
+				2.剪辑视频的时候不要中途断开，如果需要断开的话（把黑色信息框关闭掉）需要删掉剪出的视频从头重新剪
+
 			  </p>
-			</div>
+		  </div>
 		</div>
 		<footer>
 		  <hr>
@@ -112,20 +122,44 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/Others/Others_KSSnap_01_EN.webp" alt="" width="1300" height="411"> </div>
+	<img src="../../Resources/Others/Others_TrimmerTools_01.png" alt="" width="500" height="545"> </div>
+<div id="img_page02" class="img_backgroud">
+	<img src="../../Resources/Others/Others_TimmerTools_02.png" alt="" width="600" height="481"> </div>
+<div id="img_page03" class="img_backgroud">
+	<img src="../../Resources/Others/Others_TimmerTools_03.png" alt="" width="900" height="378"> </div>
 <script>
 	var imge=document.getElementById("display_img")
+	var imge2=document.getElementById("display_img02")
+	var imge3=document.getElementById("display_img03")
 	var text_bk=document.querySelector("text_background");
 	var img_bk=document.getElementById("img_page");
+	var img_bk2=document.getElementById("img_page02");
+	var img_bk3=document.getElementById("img_page03");
 	var is_img=false;
 	imge.addEventListener("click",img_show)
 	img_bk.addEventListener("click",img_close)
+	imge2.addEventListener("click",img2_show)
+	img_bk2.addEventListener("click",img2_close)
+	imge3.addEventListener("click",img3_show)
+	img_bk3.addEventListener("click",img3_close)
 	
 	function img_show(){
 		img_bk.style.display="block";
 	}
 	function img_close(){
 		img_bk.style.display="none";
+	}
+	function img2_show(){
+		img_bk2.style.display="block";
+	}
+	function img2_close(){
+		img_bk2.style.display="none";
+	}
+	function img3_show(){
+		img_bk3.style.display="block";
+	}
+	function img3_close(){
+		img_bk3.style.display="none";
 	}
 	</script>
 </body>
