--- a/help/html_EN/Others/Others.html
+++ b/help/html_EN/Others/Others.html
@@ -42,8 +42,12 @@
 			</div>
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="kitsuLogin.html" class="menu_spread_a">KitsuTaskLogin</a></li>
-					<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">KitsuTaskManager</a></li>
-					<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">KitsuTaskSnap</a></li>
+				<li class="menu_spread_li02"><a href="kitsuManager.html" class="menu_spread_a">KitsuTaskManager</a></li>
+				<li class="menu_spread_li02"><a href="kitsuSnap.html" class="menu_spread_a">KitsuTaskSnap</a></li>
+				<li class="menu_spread_li02"><a href="trimmerTools.html" class="menu_spread_a">TrimmerTools</a></li>
+				<li class="menu_spread_li02"><a href="directoryTool.html" class="menu_spread_a">directoryTools</a></li>
+				<li class="menu_spread_li02"><a href="BRMTools.html" class="menu_spread_a">BRMTools</a></li>
+				<li class="menu_spread_li02"><a href="videoCompareTool.html" class="menu_spread_a">videoCompareTools</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -99,6 +103,10 @@
 				<li class="branch_content_li"><a href="kitsuLogin.html">Kitsu Task Login</a></li>
 				<li class="branch_content_li"><a href="kitsuManager.html">Kitsu Task Manager</a></li>
 				<li class="branch_content_li"><a href="kitsuSnap.html">Kitsu Task Snap</a></li>
+				<li class="branch_content_li"><a href="trimmerTools.html">TrimmerTools</a></li>
+				<li class="branch_content_li"><a href="directoryTool.html">directoryTools</a></li>
+				<li class="branch_content_li"><a href="BRMTools.html">BRMTools</a></li>
+				<li class="branch_content_li"><a href="videoCompareTool.html">videoCompareTools</a></li>
 			</ul>
 			</div>
 			
