--- a/help/html_EN/index.html
+++ b/help/html_EN/index.html
@@ -91,6 +91,10 @@
 			  	<li class="doc_content_li_02"><a href="Others/kitsuLogin.html">Kitsu Task Login</a></li>
 			  	<li class="doc_content_li_02"><a href="Others/kitsuManager.html">Kitsu Task Manager</a></li>			  	
 				  <li class="doc_content_li_02"><a href="Others/kitsuSnap.html">Kitsu Task Snap</a></li>
+				  <li class="doc_content_li_02"><a href="Others/trimmerTools.html">TrimmerTools</a></li>
+				  <li class="doc_content_li_02"><a href="Others/directoryTool.html">directoryTools</a></li>
+				  <li class="doc_content_li_02"><a href="Others/BRMTools.html">BRMTools</a></li>
+				  <li class="doc_content_li_02"><a href="Others/videoCompareTool.html">videoCompareTools</a></li>
 			  </ul>
 		    </li>
 		  </ul>
