--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 			  	<li class="doc_content_li_02"><a href="help/html/Others/kitsuLogin.html">Kitsu Task Login&#62;&#62;Kitsu登录</a></li>
 			  	<li class="doc_content_li_02"><a href="help/html/Others/kitsuManager.html">Kitsu Task Manager&#62;&#62;Kitsu任务管理器</a></li>			  	
 				  <li class="doc_content_li_02"><a href="help/html/Others/kitsuSnap.html">Kitsu Task Snap&#62;&#62;Kitsu拍屏</a></li>
+				  <li class="doc_content_li_02"><a href="help/html/Others/trimmerTools.html">TrimmerTools&#62;&#62;剪辑工具</a></li>
+				  <li class="doc_content_li_02"><a href="help/html/Others/directoryTool.html">directoryTools&#62;&#62;工程目录创建工具</a></li>
+				  <li class="doc_content_li_02"><a href="help/html/Others/BRMTools.html">BRMTools&#62;&#62;批量修正图片命名工具</a></li>
+				  <li class="doc_content_li_02"><a href="help/html/Others/videoCompareTool.html">videoCompareTools&#62;&#62;视频edl对比工具</a></li>
 			  </ul>
 		    </li>
 		  </ul>
